# itam_hackaton

./: .env.example  .gitignore  DEBUG_NOTIFICATIONS.md  QUICK_TEST.md  README.md  TESTING_NOTIFICATIONS.md  test_notification_now.sh  test_notifications.sh
.github/workflows/: frontend.yml  go.yml  rust.yml
backend/: .dockerignore  Dockerfile  main.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/database/: database.go
backend/internal/handlers/: api_handlers.go  auth_handler.go  hackathon_handlers.go  handlers.go  inventory_handlers.go  notifications.go  server.go  somefuncs.go  swipe_handlers.go  team_balance.go  team_handlers.go  users.go
backend/internal/middleware/: auth.go  jwt.go
backend/internal/models/: hackathon.go  inventory.go  matching.go  notification.go  team.go  user.go
backend/internal/repositories/: user_repository.go
backend/internal/services/: notifications.go
backend/internal/types/: types.go
backend/migrations/: 001_initial_schema.sql  002_add_verified_skills.sql
deploy/: .env.example  README.md  docker-compose.yml  dockerComposeSave.yml  init.sql
deploy/local/: docker-compose.yml
deploy/local/migrations/: 001_create_users_table.sql  (+2 more)
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/dev-dist/: sw.js
frontend/src/: App.tsx  index.css
tgbot/: .dockerignore  Cargo.toml  Dockerfile  shell.nix
tgbot/src/: bot.rs  callbacks.rs  main.rs  notifications.rs  redis.rs  redis_client.rs
(+81 files in other folders)
