[package]
name = "tgbot"
version = "0.1.0"
edition = "2024"

[dependencies]

teloxide = { version = "0.12", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
redis = { version = "0.32", features = ["tokio-comp"] }
rand = "0.8"
chrono = "0.4"
anyhow = "1.0"
dotenvy = "0.15"
pretty_env_logger = "0.5"
log = "0.4"
